# ReaderFb2

./: .env.example  GenerateStars.java  README.md  ResizePng.java  Test.java  TestJKS.java  TestP12.java  add_get_folders.py  add_prompt_method.py  add_time_estimate.py  app_crash_log.txt  backup.txt  build_patch.py  correct_line.txt  count.py  delete_continue_reading_kt.py  delete_continue_reading_kt2.py  delete_continue_reading_xml.py  dummy.sh  epub_search.txt  epub_search2.txt  fix.py  fix2.py  fix3.py  fix_actionmode.py  fix_adapter.py  fix_ai_eng2.py  fix_ai_frag.py  fix_ai_frag2.py  fix_ai_recursion.py  fix_all.py  fix_b64.py  fix_bookviewmodel.py  fix_chapter.py  fix_collect.py  fix_collect2.py  fix_collect3.py  fix_colors.sh  fix_constructor.sh  fix_download_btn.py  (+193 more)
.github/workflows/: build.yml  release.yml
app/: build.gradle.kts  patch_reading_final.py  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
app/src/main/res/anim/: enter_from_top_right.xml  exit_to_top_right.xml  fade_in_custom.xml  fade_out_custom.xml
app/src/main/res/color/: nav_item_state_list.xml  nav_item_text_color.xml
app/src/main/res/drawable/: anim_living_forest.xml  bg_ai_chip_transparent.xml  bg_book_spine.xml  bg_brightness.xml  bg_card_forest.xml  bg_card_glass.xml  bg_chat_ai.xml  bg_chat_user.xml  bg_circle_dark.xml  bg_circle_light.xml  bg_circle_sepia.xml  bg_cover_glow.xml  bg_dark_purple_bottom_sheet.xml  (+59 more)
app/src/main/res/drawable-night/: bg_forest_gradient.xml  bg_main_drawable.xml
gradle/: libs.versions.toml
(+335 files in other folders)
